WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201111
RenderLayerModelObject should not call private RenderLayer functions
https://bugs.webkit.org/show_bug.cgi?id=201111
Summary
RenderLayerModelObject should not call private RenderLayer functions
Simon Fraser (smfr)
Reported
2019-08-23 17:56:40 PDT
RenderLayerModelObject should not call private RenderLayer functions
Attachments
Patch
(9.77 KB, patch)
2019-08-23 17:58 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-08-23 17:58:46 PDT
Created
attachment 377189
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-08-23 20:33:56 PDT
https://trac.webkit.org/changeset/249080/webkit
Radar WebKit Bug Importer
Comment 3
2019-08-23 20:34:19 PDT
<
rdar://problem/54664920
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug